kubernetes/generated/clusters/homestar/nfs-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: nfs-server
  name: nfs-server
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: nfs-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nfs-server
    spec:
      containers:
      - env:
        - name: SHARED_DIRECTORY
          value: /share
        image: shimmerjs/nfs-alpine-server:arm
        imagePullPolicy: Always
        name: nfs-server
        ports:
        - containerPort: 2049
        securityContext:
          capabilities:
            add:
            - SYS_ADMIN
            - SETPCAP
        volumeMounts:
        - mountPath: /share
          name: host-volume
      nodeSelector:
        k3s.io/hostname: atom-ant
      volumes:
      - hostPath:
          path: /media
          type: Directory
        name: host-volume
